# src/main/java/com/API/listaTareas/mapper/UsuarioMapper.java
@@ -1,9 +1,11 @@
 package com.API.listaTareas.mapper;
 
-import com.API.listaTareas.dto.UsuarioDTO;
+//import com.API.listaTareas.dto.UsuarioDTO;
 import com.API.listaTareas.model.Usuario;
+import com.baeldung.openapi.model.UsuarioDTO;
 import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 
@@ -17,6 +19,8 @@ public interface UsuarioMapper {
     Usuario toEntity(UsuarioDTO usuarioDTO);
 
     List<UsuarioDTO> toDtoList(List<Usuario> usuarios);
+
+
 
 
 }
