# src/main/java/com/API/listaTareas/service/impl/UsuarioServiceImpl.java
@@ -1,13 +1,15 @@
 package com.API.listaTareas.service.impl;
 
-import com.API.listaTareas.dto.UsuarioDTO;
+//import com.API.listaTareas.dto.UsuarioDTO;
 import com.API.listaTareas.mapper.UsuarioMapper;
 import com.API.listaTareas.model.Usuario;
 import com.API.listaTareas.repository.UsuarioRepository;
 import com.API.listaTareas.service.UsuarioService;
+import com.baeldung.openapi.model.UsuarioDTO;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -16,17 +18,29 @@ import java.util.NoSuchElementException;
 @Service
 public class UsuarioServiceImpl implements UsuarioService {
 
-    @Autowired
+
     private UsuarioRepository usuarioRepository;
 
     @Override
+    @Transactional
     public UsuarioDTO crearUser(UsuarioDTO usuarioDTO) {
 
-        return UsuarioMapper.INSTANCE.toDto(usuarioRepository.save(UsuarioMapper.INSTANCE.toEntity(usuarioDTO)));
+        // Convertir el DTO en entidad
+        Usuario usuario = UsuarioMapper.INSTANCE.toEntity(usuarioDTO);
+
+        // Guardar la entidad en la base de datos
+        Usuario usuarioGuardado = usuarioRepository.save(usuario);
+
+        // Convertir la entidad guardada de vuelta en DTO
+        UsuarioDTO usuarioDTOResultado = UsuarioMapper.INSTANCE.toDto(usuarioGuardado);
+
+        // Devolver el DTO como resultado
+        return usuarioDTOResultado;
+        //return UsuarioMapper.INSTANCE.toDto(usuarioRepository.save(UsuarioMapper.INSTANCE.toEntity(usuarioDTO)));
     }
 
     @Override
-    public UsuarioDTO eliminarUser(Long id) {
+    public UsuarioDTO eliminarUser(Integer id) {
 
         Usuario buscarusuario=usuarioRepository.findById(id).get();
 
@@ -38,18 +52,18 @@ public class UsuarioServiceImpl implements UsuarioService {
     }
 
     @Override
-    public UsuarioDTO modificarUser(Long Id, UsuarioDTO usuarioDTO) {
+    public UsuarioDTO modificarUser(Integer Id, UsuarioDTO usuarioDTO) {
 
         // Mapear el DTO a la entidad
         Usuario usuario = UsuarioMapper.INSTANCE.toEntity(usuarioDTO);
 
         Usuario modUser = usuarioRepository.findById(Id).orElseThrow(() -> new NoSuchElementException("No detectado: "+Id));
 
-        if (usuario.getNombreUser() != null && !usuario.getNombreUser() .isEmpty())
-            modUser.setNombreUser(usuario.getNombreUser());
+        if (usuario.getNombre() != null && !usuario.getNombre() .isEmpty())
+            modUser.setNombre(usuario.getNombre());
 
-        if (usuario.getTelefonoUser()!= null && !usuario.getTelefonoUser().isEmpty())
-            modUser.setTelefonoUser(usuario.getTelefonoUser());
+        if (usuario.getTelefono()!= null && !usuario.getTelefono().isEmpty())
+            modUser.setTelefono(usuario.getTelefono());
 
         // Guardar la entidad en el repositorio
         Usuario savedUsuario = usuarioRepository.save (usuario);
